# PillowBasics

./: Make.bat
Resources/Shaders/: NoLit.hlsl
SourceCode/: CMakeLists.txt  ToolchainAndroid.cmake  ToolchainWin64.cmake
SourceCode/Pillow/: Entry.cc  Temp.cc
SourceCode/Pillow/Core/: Auxiliaries.cc  Auxiliaries.h  Cache.h  Input.cc  Input.h  Texture.cc
SourceCode/Pillow/Core/Renderers/: D3D12Renderer.cc  Renderer.cc  Renderer.h
